# Volatility-Relative-Value-Toolkit

./: .gitignore  Makefile  PROJECT_SPEC.md  README.md  TASK_BOARD.md  pyproject.toml
.github/workflows/: ci.yml
backtest/: __init__.py  attribution.py  contracts.py  engine.py  execution.py  positioning.py
config/: backtest.yaml  data.yaml  report.yaml  risk.yaml  signals.yaml
data_pipeline/: __init__.py  build_dataset.py  run_stage3.py  schema.py
data_pipeline/calendars/: __init__.py  alignment.py
data_pipeline/loaders/: __init__.py  csv_loader.py  yfinance_loader.py
data_pipeline/qa/: __init__.py  missing.py  outliers.py
data_pipeline/rolls/: __init__.py  engine.py
data_pipeline/samples/: sample_prices.csv
data_pipeline/standardize/: __init__.py  transforms.py
report/: __init__.py  dashboard.py
risk/: __init__.py  drawdown.py  exposures.py  run_risk.py  stress.py  var_cvar.py
scripts/: reproduce.py  reproduce_demo.py
signals/: __init__.py  base.py  carry_roll.py  pca_factors.py  signal_registry.py  term_structure.py  vrp_proxy.py
tests/: test_backtest.py  test_build_dataset.py  test_calendar_alignment.py  test_loaders.py  test_report.py  test_reproducibility.py  test_risk.py  test_roll_rules.py  test_schema.py  test_signals.py  test_smoke.py
